--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-5XV2H8BH2T"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-5XV2H8BH2T');
+      </script>
     <script src="romans.js"></script>
     <link rel="stylesheet" href="romans.css">
   </head>
