--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <script>
       var convertButton = document.querySelector('.convert-button');
       convertButton.addEventListener('click', function() {
-        gtag('event','try_to_convert_clicked', {
-            'conversion_clicked': false
-          });
+        gtag('event','try_to_convert_clicked', {});
       });
     </script>
     <link rel="stylesheet" href="romans.css">
