--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       var convertButton = document.querySelector('.convert-button');
       convertButton.addEventListener('click', function() {
         gtag('event','try_to_convert_clicked', {});
+        console.log("Click en convert");
       });
     </script>
     <link rel="stylesheet" href="romans.css">
