bad writing fixed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         console.log("Click en convert oldschool");
       }
       var convertButton = document.querySelector('.convert-button');
-      document.getElementByClass("convertButton").addEventListener("click", googleEvent);
+      document.getElementsByClassName("convertButton").addEventListener("click", googleEvent);
       
     </script>
     <link rel="stylesheet" href="romans.css">
