--- a/index.html
+++ b/index.html
@@ -12,19 +12,12 @@
       </script>
     <script src="romans.js"></script>
     <script>
-      function googleEvent()
+      var convertButton = document.getElementsByClassName("convertButton");
+      convertButton.addEventListener("click", function ()
       {
         gtag('event','try_to_convert_clicked');
         console.log("Click en convert oldschool");
-      }
-      var convertButton = document.getElementsByClassName("convertButton");
-      convertButton.addEventListener("click", googleEvent);
-      for(var i = 0; i < convertButton.length; i++) {
-        (function(index) {
-          convertButton[index].addEventListener("click", function() {
-             googleEvent();
-           })
-        })(i)};
+      });
     </script>
     <link rel="stylesheet" href="romans.css">
   </head>
