--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </script>
     <script src="romans.js"></script>
     <script>
-      var convertButton = document.getElementsByClassName("convertButton");
+      var convertButton = document.getElementsByClassName("convert-button");
       convertButton.addEventListener("click", function ()
       {
         gtag('event','try_to_convert_clicked');
