--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       </script>
     <script src="romans.js"></script>
     <script>
-      var convertButton = document.getElementsByClassName("convert-button")[0];
-      convertButton.addEventListener("click", function ()
+      document.getElementsByClassName("convert-button")[0].addEventListener("click", function ()
       {
         gtag('event','try_to_convert_clicked');
         console.log("Click en convert oldschool");
