--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
         gtag('js', new Date());
 
         gtag('config', 'G-5XV2H8BH2T');
-        document.getElementsByClassName("convert-button")[0].addEventListener("click", function ()
-        {
-          gtag('event','try_to_convert_clicked');
-          console.log("Click en convert oldschool");
-        });
+        document.getElementsByClassName("convert-button")[0].addEventListener("click", gtag('event','try_to_convert_clicked'));
       </script>
     <script src="romans.js"></script>
     <link rel="stylesheet" href="romans.css">
