--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         gtag('js', new Date());
 
         gtag('config', 'G-5XV2H8BH2T');
-        document.getElementsByClassName("convert-button")[0].addEventListener("click", gtag('event','try_to_convert_clicked'));
       </script>
     <script src="romans.js"></script>
     <link rel="stylesheet" href="romans.css">
@@ -28,5 +27,8 @@
         <p class="convert-output"></p>
       </section>
     </main>
+    <script>
+      document.getElementsByClassName("convert-button")[0].addEventListener("click", gtag('event','try_to_convert_clicked'));
+    </script>
   </body>
 </html>
