--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <!-- Google tag (gtag.js) -->
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-PLKC4GX"></script>
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-5XV2H8BH2T"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
